--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,7 +23,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </header>
     <img class="hero"/>
     <section class="content">
         <div class="search-engine-optimization">
@@ -71,12 +71,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
