--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine optimization image" />
             <h2>Search Engine Optimization</h2>
-            <p>
+            <p class=".p">
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation Management image" />
             <h2>Online Reputation Management</h2>
-            <p>
+            <p class=".p">
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
@@ -71,6 +71,7 @@
             </p>
         </div>
     </div>
+<!--dont understand why css tags arent defined correctly and still work-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
