--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- changed div tag to header-->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,6 +25,7 @@
             </ul>
         </div>
     </header>
+    <!--Changed div tag to img-->
     <img class="hero"/>
     <section class="content">
         <div class="search-engine-optimization">
@@ -72,6 +74,7 @@
         </div>
     </div>
 <!--dont understand why css tags arent defined correctly and still work-->
+<!--Changed div tag too footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
